# shoots

./: .gitignore  CMakeLists.txt  README.md  bar  gen_compile_commands_json.sh  player.xcf  quickbuild
.cache/clangd/index/: main.c.214CAD263B86292B.idx  main.c.699C76292FF0C9C9.idx
include/: entity.h  globals.h  logger.h  player.h  utils.h
src/: entity.c  global.c  logger.c  main.c  player.c
